Better call on focusable with internal API Changed runLater for runOnFXThread