@@ -17,7 +17,9 @@ javafx {
 
 compileJava {
     // Unfocusable stage : need internal sun* API
-    options.compilerArgs += ["--add-exports=javafx.graphics/com.sun.glass.ui=org.lifecompanion.app"]
+    options.compilerArgs += [
+            '--add-exports=javafx.graphics/com.sun.glass.ui=org.lifecompanion.app',
+    ]
 }
 
 version = project.property('lifecompanion.app.version')
@@ -33,6 +35,8 @@ ext {
 
             // Unfocusable stage : need internal sun* API
             '--add-exports=javafx.graphics/com.sun.glass.ui=org.lifecompanion.app',
+            '--add-opens=javafx.graphics/javafx.stage=org.lifecompanion.app',
+            '--add-opens=javafx.graphics/com.sun.javafx.tk.quantum=org.lifecompanion.app',
 
             // ControlsFX : open internal sun* API
             '--add-opens=javafx.base/com.sun.javafx.runtime=org.controlsfx.controls',
@@ -51,7 +55,7 @@ ext {
 application {
     applicationDefaultJvmArgs = sharedJvmArgAppTest + [
             // Plugin
-             '-cp', devCpArg,
+            '-cp', devCpArg,
 
             // Debug args (VisualVM)
             '-Dcom.sun.management.jmxremote.port=9999', '-Dcom.sun.management.jmxremote.authenticate=false', '-Dcom.sun.management.jmxremote.ssl=false', // debug only
@@ -80,7 +84,7 @@ dependencies {
     api 'io.github.classgraph:classgraph:4.8.72'
 
     // Word prediction
-    api ('io.github.mthebaud:predict4all:1.2.0'){
+    api('io.github.mthebaud:predict4all:1.2.0') {
         exclude group: 'com.google.code.gson', module: 'gson'
     }
 
@@ -88,7 +92,7 @@ dependencies {
     api 'com.sparkjava:spark-core:2.9.3'
 
     // FX Controls
-    api ('org.controlsfx:controlsfx:11.0.1') {
+    api('org.controlsfx:controlsfx:11.0.1') {
         exclude group: 'org.openjfx'
     }
     // Binding helper
@@ -126,7 +130,8 @@ jlink {
         addExtraModulePath("${project.property('jfx_mac_x64')}")
     }
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages',
-               '--add-modules','java.base,jdk.localedata,jdk.crypto.cryptoki']// locale data - translations / crypto - email
+               '--add-modules', 'java.base,jdk.localedata,jdk.crypto.cryptoki']
+// locale data - translations / crypto - email
 }
 
 licenseReport {
@@ -146,7 +151,7 @@ processResources {
                 'buildDate': new Date().getTime(),
                 'updateServerUrl': project.property('lifecompanion.framework.server.url'),
                 'appServerUrl': project.property('lifecompanion.app.server.url'),
-                'appServerQueryParameters' : project.property('lifecompanion.app.server.query.parameters'),
+                'appServerQueryParameters': project.property('lifecompanion.app.server.query.parameters'),
                 'installationPublicKey': project.property('lifecompanion.app.server.public_key')
         )
     }
